:lipstick:Alignement Fixed alignment issues in Heading about and Experience

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   position: relative;
   width: 300px;
-  height: 200px;
+  height: 400px;
   background-color: #e6e1e1;
   border-radius: 10px;
   display: flex;
